# routers/api/image/register.go
@@ -1,0 +1,10 @@
+package image
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+func Register(baseGroup *gin.RouterGroup) {
+	router := baseGroup.Group("images/")
+	router.POST("/pull", pull)
+}
