# routers/router.go
@@ -8,6 +8,7 @@ import (
 	_ "github.com/xishengcai/cloud/docs"
 	"github.com/xishengcai/cloud/pkg/middleware"
 	"github.com/xishengcai/cloud/routers/api/cluster"
+	"github.com/xishengcai/cloud/routers/api/image"
 )
 
 // InitRouter initialize routing information
@@ -17,8 +18,9 @@ func InitRouter() *gin.Engine {
 	r.Use(gin.Recovery())
 	r.Use(middleware.Cors())
 
-	clusterRouter := r.Group("/api/v1/")
-	cluster.Register(clusterRouter)
+	baseRoute := r.Group("/api/v1/")
+	cluster.Register(baseRoute)
+	image.Register(baseRoute)
 
 	agg := r.Group("/")
 	agg.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
